--- a/src/app/index.css
+++ b/src/app/index.css
@@ -115,3 +115,24 @@ a {
 hr {
   clear: both;
 }
+
+.button {
+  width: 50px;
+  height: 50px;
+  background-color: pink;
+}
+
+.sidebar {
+  position: fixed;
+  width: 200px;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: lightyellow;
+}
+
+/*
+.ng-scope {
+  border: solid 1px darkgreen;
+}
+*/
