--- a/src/app/index.css
+++ b/src/app/index.css
@@ -131,6 +131,23 @@ hr {
   background-color: lightyellow;
 }
 
+.button2 {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 0;
+  background-color: pink;
+}
+
+.sidebar2 {
+  position: fixed;
+  width: 200px;
+  height: 100vh;
+  top: 0;
+  right: 0;
+  background-color: lightyellow;
+}
+
 /*
 .ng-scope {
   border: solid 1px darkgreen;
