--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -8,4 +8,4 @@
 <div class="sidebar2"
      ng-if="main.showSidebar2"
      action-on-click-outside="main.showSidebar2 = false"
-><span><button>Button</button></span></div>
+><span><button ng-click="main.showPopup()">Show Popup</button></span></div>
