list directive: making ng-repeat with ng-transclude.

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -4,6 +4,10 @@
      action-on-click-outside="main.showSidebar = false"
 ><span></span></div>
 
+<address-list items="main.awesomeThings"
+              action="open(item)"
+><h3>awasome thing {{item.title}}</h3></address-list>
+
 <div class="button2" ng-click="main.showSidebar2 = true"></div>
 <div class="sidebar2"
      ng-if="main.showSidebar2"
