add tabs directive.

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -7,6 +7,10 @@
 <address-list items="main.awesomeThings"
               action="open(item)"
 ><h3>awasome thing {{item.title}}</h3></address-list>
+<my-tabs>
+    <my-tab name="x">First tab</my-tab>
+    <my-tab name="y">Second tab</my-tab>
+</my-tabs>
 
 <div class="button2" ng-click="main.showSidebar2 = true"></div>
 <div class="sidebar2"
